--- a/glamyze/templates/user/contact.html
+++ b/glamyze/templates/user/contact.html
@@ -15,7 +15,7 @@
 <section class="bg0 p-t-104 p-b-116">
     <div class="container">
         <div class="flex-w flex-tr">
-            <div class="size-210 bor10 p-lr-70 p-t-55 p-b-70 p-lr-15-lg w-full-md">
+            <!-- <div class="size-210 bor10 p-lr-70 p-t-55 p-b-70 p-lr-15-lg w-full-md">
                 <form>
                     <h4 class="mtext-105 cl2 txt-center p-b-30">
                         Send Us A Message
@@ -34,7 +34,7 @@
                         Submit
                     </button>
                 </form>
-            </div>
+            </div> -->
 
             <div class="size-210 bor10 flex-w flex-col-m p-lr-93 p-tb-30 p-lr-15-lg w-full-md">
                 <div class="flex-w w-full p-b-42">
@@ -48,7 +48,7 @@
                         </span>
 
                         <p class="stext-115 cl6 size-213 p-t-18">
-                            Coza Store Center 8th floor, 379 Hudson St, New York, NY 10018 US
+                            Glamyze Store 8 th floor, Chochin, Kerala, India, 671313
                         </p>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                         </span>
 
                         <p class="stext-115 cl1 size-213 p-t-18">
-                            +1 800 1236879
+                            +91 7865896789
                         </p>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                         </span>
 
                         <p class="stext-115 cl1 size-213 p-t-18">
-                            contact@example.com
+                            glamayze2024@gmail.com
                         </p>
                     </div>
                 </div>
