--- a/glamyze/templates/user/address.html
+++ b/glamyze/templates/user/address.html
@@ -21,6 +21,9 @@
         <div class="card-body">
           <form method="post" action="">
             {% csrf_token %}
+            {% if checkout %}
+            <input type="hidden" name="checkout" value="True" id="">
+            {% endif %}
             <div class="row">
               <div class="col-md-6 mb-3">
                 <input type="text" class="form-control" name="name" value="{{ name }}" placeholder="Name" required>
