--- a/glamyze/templates/user/product_view.html
+++ b/glamyze/templates/user/product_view.html
@@ -45,8 +45,21 @@
 }
 
 </style>
+<div class="container">
+    <div class="bread-crumb flex-w p-l-25 p-r-15 p-t-30 p-lr-0-lg">
+        <a href="{% url 'product_app:shop' %}" class="stext-109 cl8 hov-cl1 trans-04">
+            Shop
+            <i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
+        </a>
+
+        <span class="stext-109 cl4">
+            Product
+        </span>
+    </div>
+</div>
 
 <section class="sec-product-detail bg0 p-t-65 p-b-60">
+   
   
     <div class="container">
         <div class="row">
@@ -276,7 +289,7 @@
                     </li>
 
                     <li class="nav-item p-b-10">
-                        <a class="nav-link" data-toggle="tab" href="#reviews" role="tab">Reviews (1)</a>
+                        <a class="nav-link" data-toggle="tab" href="#reviews" role="tab">Reviews</a>
                     </li>
                 </ul>
 
@@ -445,6 +458,7 @@
         <!-- Slide2 -->
         <div class="wrap-slick2">
             <div class="slick2">
+                {% if related_products %}
                 {% for item in related_products %}
                 <div class="item-slick2 p-l-15 p-r-15 p-t-15 p-b-15">
                     <div class="block2">
@@ -482,6 +496,9 @@
                     </div>
                 </div>
                 {% endfor %}
+                {% else %}
+                    <div style="width: 100%;justify-content: center; display: flex;"><p>There is no related products</p></div>
+                {% endif %}
 
             </div>
         </div>
