--- a/glamyze/templates/user/alert.html
+++ b/glamyze/templates/user/alert.html
@@ -9,7 +9,7 @@
             title: 'Successfull',
             text: 'Order Placed Successfully.',
             icon: 'success',
-            showconfirmButtonText: false
+            showConfirmButton: false
         });
         setTimeout(() => {
             window.location.href = "{% url 'auth_app:home' %}";
@@ -25,7 +25,7 @@
             title: 'Failed',
             text: 'Order Failed.',
             icon: 'error',
-            showconfirmButtonText: false
+            showConfirmButton: false
         });
         setTimeout(() => {
             window.location.href = "{% url 'auth_app:home' %}";
@@ -41,7 +41,7 @@
             title: 'Failed',
             text: 'Order Failed due to quantity issue from our side. Amount added to the wallet',
             icon: 'error',
-            showconfirmButtonText: false
+            showConfirmButton: false
         });
         setTimeout(() => {
             window.location.href = "{% url 'auth_app:home' %}";
@@ -58,7 +58,7 @@
             title: 'Failed',
             text: 'Sorry, The product is currently unavailable',
             icon: 'error',
-            showconfirmButtonText: false
+            showConfirmButton: false
         });
         setTimeout(() => {
             window.location.href = "{% url 'order_app:order_view' %}";
@@ -75,7 +75,7 @@
             title: 'Failed',
             text: 'Order Failed due to time limit exceeded to complete the payment',
             icon: 'error',
-            showconfirmButtonText: false
+            showConfirmButton: false
         });
         setTimeout(() => {
             window.location.href = "{% url 'order_app:order_view' %}";
@@ -91,7 +91,7 @@
             title: 'Successfull',
             text: 'Amount Added Successfully.',
             icon: 'success',
-            showconfirmButtonText: false
+            showConfirmButton: false
         });
         setTimeout(() => {
             window.location.href = "{% url 'wallet_app:wallet_view' %}";
@@ -108,7 +108,7 @@
             title: 'Failed',
             text: 'Order Failed due to quantity issue from our side. Amount not debited',
             icon: 'error',
-            showconfirmButtonText: false
+            showConfirmButton: false
         });
         setTimeout(() => {
             window.location.href = "{% url 'auth_app:home' %}";
@@ -124,7 +124,7 @@
             title: 'Failed',
             text: 'Order Failed. Low balance in wallet',
             icon: 'error',
-            showconfirmButtonText: false
+            showConfirmButton: false
         });
         setTimeout(() => {
             window.location.href = "{% url 'auth_app:home' %}";
