--- a/glamyze/templates/user/email_otp.html
+++ b/glamyze/templates/user/email_otp.html
@@ -9,16 +9,15 @@
     <link rel="stylesheet" type="text/css" href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}">
     <style>
-        /* Ensure body and html take full height */
+        
         html, body {
             height: 100%;
         }
-        /* Centering with Flexbox */
         .centered-container {
             display: flex;
             align-items: center;
             justify-content: center;
-            height: 100vh; /* Full height of the viewport */
+            height: 100vh; 
         }
     </style>
 </head>
