--- a/glamyze/templates/user/order_details.html
+++ b/glamyze/templates/user/order_details.html
@@ -72,7 +72,7 @@
                                  class="img-fluid" style="max-width: 80px; height: auto;">
                         </td>
                         <td>
-                            <h6 class="mb-1">{{ item.product_variant.product.product_name }}</h6>
+                            <a href="{% url 'product_app:product_view' item.product_variant.product_id %}" style="color: black;"><h6 class="mb-1">{{ item.product_variant.product.product_name }}</h6></a>
                             
                             <p class="text-muted">Variant: {{ item.product_variant.size.size_code }}</p>
                             
