--- a/glamyze/templates/user/reviews.html
+++ b/glamyze/templates/user/reviews.html
@@ -2,6 +2,22 @@
 {% load static %}
 
 {% block shop %}
+<div class="container">
+    <div class="bread-crumb flex-w p-l-25 p-r-15 p-t-30 p-lr-0-lg">
+        <a href="{% url 'product_app:shop' %}" class="stext-109 cl8 hov-cl1 trans-04">
+            Shop
+            <i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
+        </a>
+        <a href="{% url 'product_app:product_view' product.id %}" class="stext-109 cl8 hov-cl1 trans-04">
+            Product
+            <i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
+        </a>
+
+        <span class="stext-109 cl4">
+            Reviews
+        </span>
+    </div>
+</div>
 <div class="container product-review-section mt-5">
     <div class="row">
         <div class="col-lg-4 col-md-5 product-info-column">
