Minor issue in nav bar fixed

--- a/glamyze/templates/user/about.html
+++ b/glamyze/templates/user/about.html
@@ -1,7 +1,7 @@
 {% extends 'user/blank_layout.html' %}
 
 {% load static %}
-
+{% block active3 %}class="active-menu"{% endblock %}
 {% block shop %}
 <section class="bg-img1 txt-center p-lr-15 p-tb-92" style="background-image: url('/images/bg-01.jpg'); margin-top: -200px;">
     <h2 class="ltext-105 cl0 txt-center">
