--- a/glamyze/templates/user/contact.html
+++ b/glamyze/templates/user/contact.html
@@ -1,6 +1,7 @@
 {% extends 'user/blank_layout.html' %}
 
 {% load static %}
+{% block active4 %}class="active-menu"{% endblock %}
 
 {% block shop %}
 <!-- Title page -->
